--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 
     <!-- css -->
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
 
     <!-- Bootstrap CSS -->
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
 
 
 
@@ -21,66 +22,128 @@
 </head>
 
 <body>
-
-    <div class="container-fluid">
-        <div class="col main">
-            <div class="row header" id="navbar">
-                <div class="col-12">
-                    <div class="row">
-                        <div class="col-1 logo">
-                            <!-- <a href="" class="logo-click"></a> -->
-                            <img src="./assets/images/logo2.jpg" class="img-fluid" alt="">
-                        </div>
-                        <div class="col nav">
-                            <a href="#">Home</a>
-                            <a href="#">Home</a>
-                            <a href="#">Home</a>
-                            <a href="#">Home</a>
-                            <a href="#">Home</a>
-                        </div>
-                        <div class="col-2 user">
-                            <div class="search-box">
-                                <div>
-                                    <img src="./assets/images/search.png" alt="">
-                                </div>
-                                <div><input class="search-key" type="text"></div>
-
-                            </div>
-                        </div>
+    <!-- Header  -->
+    <header class="container-fluid">
+        <div class="row">
+            <div class="col-1 logo">
+                <!-- <a href="" class="logo-click"></a> -->
+                <img src="./assets/images/logo2.jpg" class="" alt="">
+            </div>
+            <div class="col nav">
+                <a href="#">Home</a>
+                <a href="#">District</a>
+                <a href="#">About</a>
+                <a href="#">Contact</a>
+                <a href="#">Home</a>
+            </div>
+            <div class="col-3 user">
+                <div class="search-box">
+                    <div>
+                        <img src="./assets/images/search.png" alt="">
                     </div>
+                    <div><input class="search-key" type="text"></div>
 
                 </div>
-
-
             </div>
+        </div>
+
+    </header>
+    <section class="container-fluid intro">
+        <div class="row">
+            <div id="carouselExampleControls" class="col carousel slide carousel-fade" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="./assets/images/intro-carousel/intro4.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./assets/images/intro-carousel/intro3.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./assets/images/intro-carousel/intro1.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./assets/images/intro-carousel/intro2.jpg" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+    </section>
+
+    <!--  -->
+
+    <section class="container">
+        <article class="row welcome">
+            <div class="col-6">
+                <img src="./assets/images/section2/kathakali-namaskar.jpg" alt="">
+            </div>
+            <div class="col-6">
+                <p>God's Own Country - See the real paradise Kerala "God's Own Country" is the perfect introduction to travel in India. It plays a major role in India tourism and deserves the attentions of tourists from all over the world. There are a lot
+                    of tourism options in this culturally and geographically rich state of Kerala, India. During your Kerala tour you will have wonderful opportunity to explore serene backwaters and rolling hills, gushing waterfalls and adrenaline-pumping
+                    boat races; ancient culture in modern cities; delectable cuisine and colorful festivals. What else do one need to plan a holiday in Kerala?</p>
+            </div>
+
+        </article>
+
+        <article class="row ">
+            <h2 class="text-center">Top Destinations</h2>
+            <div class="row row-cols-lg-4 top-dest">
+
+                <div class="col dest">
+                    <a href="">
+                        <img src="./assets/images/section2/top-dest/alappuzha-480x270-2.jpg" alt="">
+                    </a>
+                </div>
+                <div class="col dest">
+                    <a href=""><img src="./assets/images/section2/top-dest/bekal-fort-3.jpg" alt=""></a>
+                </div>
+                <div class="col dest">
+                    <a href=""><img src="./assets/images/section2/top-dest/hill-palace-2.jpg" alt=""></a>
+                </div>
+                <div class="col dest">
+                    <a href=""><img src="./assets/images/section2/top-dest/kottur.jpg" alt=""></a>
+                </div>
+                <div class="col dest">
+                    <a href=""><img src="./assets/images/section2/top-dest/munnar-1.jpg" alt=""></a>
+                </div>
+                <div class="col dest">
+                    <a href=""><img src="./assets/images/section2/top-dest/thusharagiri-306_01_.jpg" alt=""></a>
+                </div>
+                <div class="col dest">
+                    <a href=""><img src="./assets/images/section2/top-dest/Shendurney.jpg" alt=""></a>
+                </div>
+                <div class="col dest">
+                    <a href=""><img src="./assets/images/section2/top-dest/aralamjpg.jpg" alt=""></a>
+                </div>
+            </div>
+
+        </article>
+    </section>
+
+
+
+    <!-- Footer -->
+    <footer class="container-fluid">
+        <div class="row">
+            <div class="col"></div>
+        </div>
+    </footer>
+
+    <!-- <div class="container-fluid">
+        <div class="col main">
+            
 
             <div class="row content">
                 <div class="col">
                     <div class="row">
-                        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                            <div class="carousel-inner">
-                                <div class="carousel-item active">
-                                    <img src="./assets/images/intro-carousel/intro4.jpg" class="d-block w-100" alt="...">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="./assets/images/intro-carousel/intro3.jpg" class="d-block w-100" alt="...">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="./assets/images/intro-carousel/intro1.jpg" class="d-block w-100" alt="...">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="./assets/images/intro-carousel/intro2.jpg" class="d-block w-100" alt="...">
-                                </div>
-                            </div>
-                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Previous</span>
-                            </button>
-                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Next</span>
-                            </button>
-                        </div>
+                        
                     </div>
                 </div>
 
@@ -93,9 +156,9 @@
 
             </div>
         </div>
-    </div>
+    </div> -->
 
-    </div>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
