--- a/erklm.html
+++ b/erklm.html
@@ -30,8 +30,8 @@
                 <img src="./assets/images/logo2.jpg" class="" alt="">
             </div>
             <div class="col nav">
-                <a href="./index.html">Home</a>
-                <a class="active" href="#">District</a>
+                <a href="#">Home</a>
+                <a href="#">District</a>
                 <a href="#">About</a>
                 <a href="#">Contact</a>
                 <a href="#">Home</a>
@@ -48,6 +48,17 @@
         </div>
 
     </header>
+
+    <!-- content -->
+    <section class="container-fluid">
+        <article class="">
+            <div class="row dist-img">
+                <img src="./assets/images/Ditricts/ernakulam.jpg" alt="">
+            </div>
+        </article>
+        <article class=""></article>
+    </section>
+
 
 
     <!-- Footer -->
