--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
 
 <body>
     <!-- Header  -->
-    <header class="container-fluid">
+    <header class="container-fluid" id="header">
         <div class="row">
             <div class="col-1 logo">
                 <!-- <a href="" class="logo-click"></a> -->
                 <img src="./assets/images/logo2.jpg" class="" alt="">
             </div>
             <div class="col nav">
-                <a href="#">Home</a>
-                <a href="#">District</a>
+                <a class="active" href="./index.html">Home</a>
+                <a href="./district.html">District</a>
                 <a href="#">About</a>
                 <a href="#">Contact</a>
                 <a href="#">Home</a>
@@ -48,6 +48,8 @@
         </div>
 
     </header>
+
+    <!-- intro -->
     <section class="container-fluid intro">
         <div class="row">
             <div id="carouselExampleControls" class="col carousel slide carousel-fade" data-bs-ride="carousel">
@@ -60,6 +62,9 @@
                     </div>
                     <div class="carousel-item">
                         <img src="./assets/images/intro-carousel/intro1.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./assets/images/intro-carousel/intro5.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
                         <img src="./assets/images/intro-carousel/intro2.jpg" class="d-block w-100" alt="...">
@@ -80,11 +85,11 @@
     <!--  -->
 
     <section class="container">
-        <article class="row welcome">
-            <div class="col-6">
-                <img src="./assets/images/section2/kathakali-namaskar.jpg" alt="">
+        <article class="row welcome mb-5">
+            <div class="col-6 mb-3">
+                <img src="./assets/images/section2/kathakali-namaskar.jpg" alt="" class="d-block">
             </div>
-            <div class="col-6">
+            <div class="col-6 mb-3">
                 <p>God's Own Country - See the real paradise Kerala "God's Own Country" is the perfect introduction to travel in India. It plays a major role in India tourism and deserves the attentions of tourists from all over the world. There are a lot
                     of tourism options in this culturally and geographically rich state of Kerala, India. During your Kerala tour you will have wonderful opportunity to explore serene backwaters and rolling hills, gushing waterfalls and adrenaline-pumping
                     boat races; ancient culture in modern cities; delectable cuisine and colorful festivals. What else do one need to plan a holiday in Kerala?</p>
@@ -92,38 +97,92 @@
 
         </article>
 
-        <article class="row ">
-            <h2 class="text-center">Top Destinations</h2>
+        <article class="row mb-5">
+            <h2 class="text-center mb-4">Top Destinations</h2>
             <div class="row row-cols-lg-4 top-dest">
 
                 <div class="col dest">
-                    <a href="">
-                        <img src="./assets/images/section2/top-dest/alappuzha-480x270-2.jpg" alt="">
-                    </a>
+                    <a href=""> <img src="./assets/images/section2/top-dest/alappuzha-480x270-2.jpg" alt="" title="Alappuzha"></a>
                 </div>
                 <div class="col dest">
-                    <a href=""><img src="./assets/images/section2/top-dest/bekal-fort-3.jpg" alt=""></a>
+                    <a href=""><img src="./assets/images/section2/top-dest/bekal-fort-3.jpg" alt="" title="Bekal Fort"></a>
                 </div>
                 <div class="col dest">
-                    <a href=""><img src="./assets/images/section2/top-dest/hill-palace-2.jpg" alt=""></a>
+                    <a href=""><img src="./assets/images/section2/top-dest/hill-palace-2.jpg" alt="" title="Hill Palace"></a>
                 </div>
                 <div class="col dest">
-                    <a href=""><img src="./assets/images/section2/top-dest/kottur.jpg" alt=""></a>
+                    <a href=""><img src="./assets/images/section2/top-dest/kottur.jpg" alt="" title="Kottur"></a>
                 </div>
                 <div class="col dest">
-                    <a href=""><img src="./assets/images/section2/top-dest/munnar-1.jpg" alt=""></a>
+                    <a href=""><img src="./assets/images/section2/top-dest/munnar-1.jpg" alt="" title="Munnar"></a>
                 </div>
                 <div class="col dest">
-                    <a href=""><img src="./assets/images/section2/top-dest/thusharagiri-306_01_.jpg" alt=""></a>
+                    <a href=""><img src="./assets/images/section2/top-dest/thusharagiri-306_01_.jpg" alt="" title="Thusharagiri"></a>
                 </div>
                 <div class="col dest">
-                    <a href=""><img src="./assets/images/section2/top-dest/Shendurney.jpg" alt=""></a>
+                    <a href=""><img src="./assets/images/section2/top-dest/Shendurney.jpg" alt="" title="Shendurney"></a>
                 </div>
                 <div class="col dest">
-                    <a href=""><img src="./assets/images/section2/top-dest/aralamjpg.jpg" alt=""></a>
+                    <a href=""><img src="./assets/images/section2/top-dest/aralamjpg.jpg" alt="" title="Aralam"></a>
                 </div>
             </div>
 
+        </article>
+
+        <article class="row mb-5 plan">
+            <div class="col-md-12 section-head">
+                <h2 class="text-center mb-4">Plan Your Trip</h2>
+                <span class="sub-head"></span>
+            </div>
+
+            <div class="col-md-12 wall">
+                <ul class="travel-icons">
+                    <li>
+                        <a href="https://www.keralatourism.org/where-to-stay/">
+                            <i class="hotel">
+                                <img loading="lazy" src="./assets/images/section2/plans/hotel.png"
+                                    alt="Where to Stay">
+                            </i>
+                            <span class="caption">Where to Stay</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.keralatourism.org/ebrochures/"><i class="brochure"><img loading="lazy"
+                                    src="./assets/images/section2/plans/brochure.png"
+                                    alt="E Brochures"></i><span class="caption">E Brochures</span></a>
+                    </li>
+                    <li>
+                        <a href="https://www.keralatourism.org/visa-requirement/"><i class="visa"><img loading="lazy"
+                                    src="./assets/images/section2/plans/visa.png"
+                                    alt="Visa on Arrival"></i><span class="caption">Visa on Arrival</span></a>
+                    </li>
+                    <li>
+                        <a href="https://www.keralatourism.org/traveller/"><i class="info"><img loading="lazy"
+                                    src="./assets/images/section2/plans/info.png"
+                                    alt="Travel Info"></i><span class="caption">Travel Info</span></a>
+                    </li>
+                    <li>
+                        <a href="https://www.keralatourism.org/travelcare"><i class="messageboard"><img loading="lazy"
+                                    src="./assets/images/section2/plans/messageboard.png"
+                                    alt="Travel Care"></i><span class="caption">Travel Care</span></a>
+                    </li>
+                    <li>
+                        <a href="https://www.keralatourism.org/toiletsurvey"><i class="toilets"><img loading="lazy"
+                                    src="./assets/images/section2/plans/toilets.png"
+                                    alt="Toilets"></i><span class="caption">Toilets</span></a>
+                    </li>
+                    <li>
+                        <a href="https://www.keralatourism.org/newsletter"><i class="messageboard"><img loading="lazy"
+                                    src="./assets/images/section2/plans/newsletter.png"
+                                    alt="Newsletter"></i><span class="caption">E Newsletter</span></a>
+                    </li>
+                    <li>
+                        <a href="https://www.keralatourism.org/yatrinivas"><i style="padding:22px;"><img loading="lazy"
+                                    src="./assets/images/section2/plans/logo.png" alt="Newsletter"></i><span
+                                class="caption">Yathri Nivas</span></a>
+                    </li>
+                </ul>
+            </div>
         </article>
     </section>
 
@@ -132,35 +191,38 @@
     <!-- Footer -->
     <footer class="container-fluid">
         <div class="row">
-            <div class="col"></div>
+            <div class="col-12">
+                <div id="credit " class="fnt-color-light">
+                    <h3 class="text-center"><small>Toll free No: </small> 1-800-425-4747 <small>(Within India only)</small></h3>
+                    Department of Tourism, Government of Kerala, Park View, Thiruvananthapuram, Kerala, India - 695 033<br>Phone: +91 471 2321132, Fax: +91 471 2322279, E-mail: <a href="mailto:info@keralatourism.org">info@keralatourism.org</a>. <br>All
+                    rights reserved © Kerala Tourism 2022. <a href="" title="Copyright">Copyright</a> | <a href="" title="Terms of Use">Terms of Use</a> | <a href="" title="Cookie Policy">Cookie Policy</a> | <a href="" title="Contact Us">Contact Us</a>.
+                    <br>Developed &amp; Maintained by Invis Multimedia.
+                </div>
+            </div>
         </div>
+        <div></div>
     </footer>
 
-    <!-- <div class="container-fluid">
-        <div class="col main">
-            
 
-            <div class="row content">
-                <div class="col">
-                    <div class="row">
-                        
-                    </div>
-                </div>
-
-            </div>
-
-            <div class="row footer">
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-
-            </div>
-        </div>
-    </div> -->
 
 
 
     <!-- Optional JavaScript -->
+
+    <script>
+        // When the user scrolls down 50px from the top of the document, resize the header's font size
+        window.onscroll = function() {
+            scrollFunction()
+        };
+
+        function scrollFunction() {
+            if (document.body.scrollTop > 50 || document.documentElement.scrollTop > 50) {
+                document.getElementById("header").classList.add("head-scroll");
+            } else {
+                document.getElementById("header").classList.remove("head-scroll");
+            }
+        }
+    </script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
