--- a/KLM.html
+++ b/KLM.html
@@ -46,8 +46,8 @@
     <section class="container-fluid dist-intro">
       <article class="row">
         <div class="col dist-img">
-          <h1 class="glow">ERNAKULAM</h1>
-          <img src="./assets/images/Ditricts/ernakulam.jpg" alt="" />
+          <h1 class="glow">KOLLAM</h1>
+          <img src="./assets/images/Ditricts/kollam.jpg" alt="" />
         </div>
       </article>
     </section>
@@ -56,9 +56,9 @@
       <article class="row mb-5">
         <div class="col-6">
           <div class="image-container">
-            <a href="https://ernakulam.nic.in/">
+            <a href="https://kollam.nic.in/">
               <img
-                src="./assets/images/Ditricts/map/ernakulam-map.png"
+                src="./assets/images/Ditricts/map/kollam-map.png"
                 class="w-100"
                 alt=""
               />
@@ -69,10 +69,7 @@
           <div class="mt-5">
             <h3>ABOUT DISTRICT&nbsp;</h3>
             <p>
-              <strong
-                >Ernakulam: An amazing paradigm of development &amp;
-                conservation</strong
-              >
+              <strong>Kollam: The amazing boat race</strong>
             </p>
             <p
               class="text-justify"
@@ -80,18 +77,20 @@
               dir="ltr"
               data-placeholder="Translation"
             >
-              Ernakulam bordering the district of Thrissur in the north, Idukki
-              in the East, Alapuzha and Kottayam in the south, Lakshadweep Sea
-              in the west is an amalgam of a hoary heritage and global growth of
-              industry and commerce. For the outside world, Ernakulam is part of
-              Kochi referred to in the history of Kerala as the Queen of Arabian
-              Sea. The densely populated Ernakulam District embodies the
-              achievements of the Kerala State in literacy, industry, trade and
-              commerce. With an inclusive culture, relatively high per capita
-              income and an unstoppable interest of the people in updating
-              themselves of the political, economic, social and cultural
-              happenings in the national and international spheres, Ernakulam
-              represents the high modern phase of the Kerala society.
+              Kollam district (formerly Quilon) is one of 14 districts of the
+              state of Kerala, India. The district has a cross-section of
+              Kerala's natural attributes; it is endowed with a long coastline,
+              a major Laccadive Sea seaport and an inland lake (Ashtamudi Lake).
+              The district has many source of waterbodies. Kallada river is one
+              among it and the east side land of river is EastKallada and the
+              west side land is WestKallada. Kallada Boat race is one among the
+              famous festival events of district. Even though it is a
+              competition between two land sides of river many boat clubs from
+              various places even beyond the district use to participate in the
+              event. Kollam is the capital of Kerala's cashew industry. Plains,
+              mountains, lakes, lagoons and backwaters, forests, farmland and
+              rivers make up the topography of the district. The area had
+              trading relationships with Phoenicia and Ancient Rome.
             </p>
           </div>
         </div>
@@ -106,7 +105,7 @@
             <div class="col-3">
               <div class="text-center">
                 <h2 class="">
-                  Areekkal Waterfalls
+                  Amritapuri
                 </h2>
                 <figure>
                   <img
@@ -118,10 +117,11 @@
               </div>
               <div class="wpb_wrapper">
                 <p class="text-justify">
-                  Areekkal falls is a must see beautiful place in Kochi, Its 35
-                  kilometers away from the main city on the Ernakulam –
-                  Thodupuzha road. One can reach Areekkal falls within one hour
-                  travel from kochi main city.
+                  Amritapuri is the headquarters of Amma's worldwide mission and
+                  the spiritual home for Amma's monastic disciples and hundreds
+                  of householder devotees. This place, which is aldo her
+                  birthplace, now sees her followers from across India and
+                  abroad, coming here to have Amma's darshan (sighting).
                 </p>
                 <p class="place-location">
                   Location:
@@ -131,16 +131,16 @@
                     src="./assets/images/loc.png"
                     alt="map"
                     width="21"
-                    height="21"                    
+                    height="21"
                     sizes="(max-width: 21px) 100vw, 21px"
                   />
                   <a
-                    href="https://www.google.co.in/maps/dir/''/areekkal+waterfalls/@9.9184672,76.4672979,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3b07de98019f58e3:0x9317ace207ad877c!2m2!1d76.5373385!2d9.9184745"
+                    href="https://www.google.com/maps/place/Amritapuri,+Vallikavu,+Kerala+690546/data=!4m2!3m1!1s0x3b0602e90737c955:0x2a8cdd448f63636b?sa=X&ved=2ahUKEwiFmf-8g6L1AhUyT2wGHf2JC3MQ8gF6BAgtEAE"
                     onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
                     aria-label="Piramadam-Vettimood Road - External site that opens in a new window"
                     title="Piramadam-Vettimood Road - External site that opens in a new window"
                     target="_blank"
-                    >Piramadam-Vettimood Road</a
+                    >kollam, Kerala</a
                   >
                 </p>
               </div>
@@ -149,21 +149,22 @@
             <div class="col-3">
               <div class="text-center">
                 <h2 class="">
-                  Bastion Bunglow
+                  Jatayu Earth's Centre
                 </h2>
                 <figure>
                   <img
                     class="dist-place"
-                    src="./assets/images/Ditricts/ekl/bastian.jpg"
+                    src="./assets/images/Ditricts/KLM/jatayu.jpg"
                     alt=""
                   />
                 </figure>
               </div>
               <div class="wpb_wrapper">
                 <p class="text-justify">
-                  Built in the Indo-European style way back in 1667 AD, Bastion
-                  Bungalow get its name from its location on the site of the
-                  Stromberg Bastion of the old, Dutch fort
+                  Jatayu Nature Park is a rock-themed park under construction at
+                  Chandamalayam in Kollam district of Kerala, all set to open in
+                  August 2017. Built to promote mythology and adventure tourism,
+                  the tourism centre boasts of 6D theatre
                 </p>
                 <p class="place-location">
                   Location:
@@ -173,16 +174,16 @@
                     src="./assets/images/loc.png"
                     alt="map"
                     width="21"
-                    height="21"                    
+                    height="21"
                     sizes="(max-width: 21px) 100vw, 21px"
                   />
                   <a
-                    href="https://www.google.co.in/maps/dir/''/bastion+bungalow/@9.9673778,76.2230607,14z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3b086d3394a701f3:0x68ff87927c894f62!2m2!1d76.2412166!2d9.9673428"
+                    href="https://www.google.com/maps/place/Jatayu+Earth's+Center/@8.8606621,76.8648664,17z/data=!3m1!4b1!4m5!3m4!1s0x3b05ddd5ea2b9599:0x77a24d56f5a90c70!8m2!3d8.8606621!4d76.8670551"
                     onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
                     aria-label="Napier Street, Fort Kochi - External site that opens in a new window"
                     title="Napier Street, Fort Kochi - External site that opens in a new window"
                     target="_blank"
-                    >Napier Street, Fort Kochi
+                    >Jatayu Junction
                   </a>
                 </p>
               </div>
@@ -191,21 +192,23 @@
             <div class="col-3">
               <div class="text-center">
                 <h2 class="">
-                  Bhoothathankettu
+                  Punalur
                 </h2>
                 <figure>
                   <img
                     class="dist-place"
-                    src="./assets/images/Ditricts/ekl/boothathan.jpg"
+                    src="./assets/images/Ditricts/KLM/Punalur.jpg"
                     alt=""
                   />
                 </figure>
               </div>
               <div class="wpb_wrapper">
                 <p class="text-justify">
-                  scenic dam site with boating facilities is situated in a vast
-                  virgin forest. It is a popular picnic sport with Salim Ali
-                  Bird Sanctuary near by.
+                  The town's name translates into 'town of water', the river
+                  Kallada flows through the city of Punalur. This town is also
+                  known as the 'lap of the Western Ghats' because of its serene
+                  natural beauty. Punalur is pretty famous for its pineapples,
+                  plywood, pepper and timber.
                 </p>
                 <p class="place-location">
                   Location:
@@ -215,16 +218,16 @@
                     src="./assets/images/loc.png"
                     alt="map"
                     width="21"
-                    height="21"                    
+                    height="21"
                     sizes="(max-width: 21px) 100vw, 21px"
                   />
                   <a
-                    href="https://www.google.co.in/maps/dir/''/Bhoothathankettu,+Kerala+686681/@10.1363816,76.5921814,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3b07ef9677611ba7:0x6cf0f6a94a575f7!2m2!1d76.662222!2d10.136389"
+                    href="https://www.google.com/maps/place/Punalur,+Kerala/@9.0158508,76.8922581,13z/data=!3m1!4b1!4m5!3m4!1s0x3b06769690499369:0xd54a44442e855bed!8m2!3d9.0176117!4d76.9260936"
                     onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
                     aria-label="Kothamangalam - External site that opens in a new window"
                     title="Kothamangalam - External site that opens in a new window"
                     target="_blank"
-                    >Kothamangalam</a
+                    >Punalur, Ananthapura</a
                   >
                 </p>
               </div>
@@ -233,21 +236,22 @@
             <div class="col-3">
               <div class="text-center">
                 <h2 class="">
-                  Bolghatty palace
+                  Palaruvi Waterfalls
                 </h2>
                 <figure>
                   <img
                     class="dist-place"
-                    src="./assets/images/Ditricts/ekl/bolgaty.jpg"
+                    src="./assets/images/Ditricts/KLM/Palaruvi Waterfalls.jpg"
                     alt=""
                   />
                 </figure>
               </div>
               <div class="wpb_wrapper">
                 <p class="text-justify">
-                  Bolghatty palace built by the Dutch in 1744. The grounds have
-                  a small golf course &amp; several vantage points for lovely
-                  views of the harbour &amp; the sea
+                  A gorgeous waterfall located on the Kollam-Shencottah Road at
+                  Palaruvi is lying at an altitude of 300 feet; the ideal time
+                  to enjoy the freshness of the waterfall is from June to
+                  January.
                 </p>
                 <p class="place-location">
                   Location:
@@ -257,16 +261,16 @@
                     src="./assets/images/loc.png"
                     alt="map"
                     width="21"
-                    height="21"                    
+                    height="21"
                     sizes="(max-width: 21px) 100vw, 21px"
                   />
                   <a
-                    href="https://www.google.co.in/maps/dir/''/bolgatty+palace++ernakulam/@9.9841952,76.1971708,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3b0812a63b6445d3:0xfce7a976921f7af1!2m2!1d76.2672114!2d9.9842025"
+                    href="https://www.google.com/maps/place/Palaruvi+Waterfalls/@8.9421,77.1628628,17z/data=!3m1!4b1!4m5!3m4!1s0x3b05d570afa845b3:0x9ad29897133245dc!8m2!3d8.9421!4d77.1650515"
                     onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
                     aria-label="Mulavukad, Kochi - External site that opens in a new window"
                     title="Mulavukad, Kochi - External site that opens in a new window"
                     target="_blank"
-                    >Mulavukad, Kochi</a
+                    >Rd to Palaruvi Waterfalls, Palaruvi</a
                   >
                 </p>
               </div>
@@ -274,7 +278,7 @@
           </div>
 
           <!-- second -->
-          <div class="row places-row mb-3">
+          <div class="row places-row mb-3 d-none">
             <div class="col-3">
               <div class="text-center">
                 <h2 class="">
@@ -302,7 +306,7 @@
                     src="./assets/images/loc.png"
                     alt="map"
                     width="21"
-                    height="21"                    
+                    height="21"
                     sizes="(max-width: 21px) 100vw, 21px"
                   />
                   <a
@@ -345,7 +349,7 @@
                     src="./assets/images/loc.png"
                     alt="map"
                     width="21"
-                    height="21"                    
+                    height="21"
                     sizes="(max-width: 21px) 100vw, 21px"
                   />
                   <a
@@ -386,7 +390,7 @@
                     src="./assets/images/loc.png"
                     alt="map"
                     width="21"
-                    height="21"                    
+                    height="21"
                     sizes="(max-width: 21px) 100vw, 21px"
                   />
                   <a
@@ -430,7 +434,7 @@
                     src="./assets/images/loc.png"
                     alt="map"
                     width="21"
-                    height="21"                    
+                    height="21"
                     sizes="(max-width: 21px) 100vw, 21px"
                   />
                   <a
@@ -445,10 +449,11 @@
               </div>
             </div>
           </div>
-          
         </div>
         <div class="row set-more mb-3">
-            <a class="more" href="https://ernakulam.nic.in/places-of-interest/">More</a>
+          <a class="more" href="https://kollam.nic.in/"
+            >More</a
+          >
         </div>
       </article>
     </section>
