--- a/MA.html
+++ b/MA.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -46,8 +47,8 @@
     <section class="container-fluid dist-intro">
       <article class="row">
         <div class="col dist-img">
-          <h1 class="glow">ERNAKULAM</h1>
-          <img src="./assets/images/Ditricts/ernakulam.jpg" alt="" />
+          <h1 class="glow">Malappuram</h1>
+          <img src="./assets/images/Ditricts/MALAPPURAM.jpg" alt="" />
         </div>
       </article>
     </section>
@@ -56,9 +57,9 @@
       <article class="row mb-5">
         <div class="col-6">
           <div class="image-container">
-            <a href="https://ernakulam.nic.in/">
+            <a href="https://malappuram.nic.in/">
               <img
-                src="./assets/images/Ditricts/map/ernakulam-map.png"
+                src="./assets/images/Ditricts/map/MA-map.png"
                 class="w-100"
                 alt=""
               />
@@ -69,10 +70,7 @@
           <div class="mt-5">
             <h3>ABOUT DISTRICT&nbsp;</h3>
             <p>
-              <strong
-                >Ernakulam: An amazing paradigm of development &amp;
-                conservation</strong
-              >
+              <strong>Kozhikode: Land of Taste and love</strong>
             </p>
             <p
               class="text-justify"
@@ -80,18 +78,15 @@
               dir="ltr"
               data-placeholder="Translation"
             >
-              Ernakulam bordering the district of Thrissur in the north, Idukki
-              in the East, Alapuzha and Kottayam in the south, Lakshadweep Sea
-              in the west is an amalgam of a hoary heritage and global growth of
-              industry and commerce. For the outside world, Ernakulam is part of
-              Kochi referred to in the history of Kerala as the Queen of Arabian
-              Sea. The densely populated Ernakulam District embodies the
-              achievements of the Kerala State in literacy, industry, trade and
-              commerce. With an inclusive culture, relatively high per capita
-              income and an unstoppable interest of the people in updating
-              themselves of the political, economic, social and cultural
-              happenings in the national and international spheres, Ernakulam
-              represents the high modern phase of the Kerala society.
+              Kozhikode, also known in English as Calicut, is an Indian city and
+              the second-largest metropolitan city in the State of Kerala. It is
+              also the 19th largest in the country with a population of two
+              million according to the 2011 census.[8] Kozhikode is classified
+              as a Tier 2 city by the Government of India.[9] It is the largest
+              city in the region known as Malabar and was the capital of the
+              British-era Malabar district. In antiquity and the medieval
+              period, Kozhikode was dubbed the City of Spices for its role as
+              the major trading point for Indian spices.
             </p>
           </div>
         </div>
@@ -106,22 +101,22 @@
             <div class="col-3">
               <div class="text-center">
                 <h2 class="">
-                  Areekkal Waterfalls
+                  Backwaters in Kozhikode
                 </h2>
                 <figure>
                   <img
                     class="dist-place"
-                    src="./assets/images/Ditricts/ekl/areekkal.jpg"
+                    src="./assets/images/Ditricts/KZK/Backwaters in Kozhikode.jpg"
                     alt=""
                   />
                 </figure>
               </div>
               <div class="wpb_wrapper">
                 <p class="text-justify">
-                  Areekkal falls is a must see beautiful place in Kochi, Its 35
-                  kilometers away from the main city on the Ernakulam –
-                  Thodupuzha road. One can reach Areekkal falls within one hour
-                  travel from kochi main city.
+                  Spread across long stretches of the Arabian water, these
+                  beguiling backwater lagoons are a sight to withhold. However,
+                  they are well known for its cruises on houseboats which offer
+                  an enthralling experience.
                 </p>
                 <p class="place-location">
                   Location:
@@ -131,16 +126,16 @@
                     src="./assets/images/loc.png"
                     alt="map"
                     width="21"
-                    height="21"                    
+                    height="21"
                     sizes="(max-width: 21px) 100vw, 21px"
                   />
                   <a
-                    href="https://www.google.co.in/maps/dir/''/areekkal+waterfalls/@9.9184672,76.4672979,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3b07de98019f58e3:0x9317ace207ad877c!2m2!1d76.5373385!2d9.9184745"
+                    href="https://www.google.com/maps/search/Backwaters+in+Kozhikode/@11.0151445,75.2812695,9z/data=!3m1!4b1"
                     onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
                     aria-label="Piramadam-Vettimood Road - External site that opens in a new window"
                     title="Piramadam-Vettimood Road - External site that opens in a new window"
                     target="_blank"
-                    >Piramadam-Vettimood Road</a
+                    >kozhikode ,kerala</a
                   >
                 </p>
               </div>
@@ -149,21 +144,23 @@
             <div class="col-3">
               <div class="text-center">
                 <h2 class="">
-                  Bastion Bunglow
+                  Kozhippara Falls
                 </h2>
                 <figure>
                   <img
                     class="dist-place"
-                    src="./assets/images/Ditricts/ekl/bastian.jpg"
+                    src="./assets/images/Ditricts/KZK/Kozhippara Falls.jpg"
                     alt=""
                   />
                 </figure>
               </div>
               <div class="wpb_wrapper">
                 <p class="text-justify">
-                  Built in the Indo-European style way back in 1667 AD, Bastion
-                  Bungalow get its name from its location on the site of the
-                  Stromberg Bastion of the old, Dutch fort
+                  Easily accessible by roads, Kozhippara Falls are situated on
+                  the borders of Kakkadampoyil on the Malappuram -Calicut
+                  District divide in Malappuram district. Providing a stunning
+                  sight, these falls are best known for its swimming, bird
+                  watching and jungle trekking.
                 </p>
                 <p class="place-location">
                   Location:
@@ -173,16 +170,16 @@
                     src="./assets/images/loc.png"
                     alt="map"
                     width="21"
-                    height="21"                    
+                    height="21"
                     sizes="(max-width: 21px) 100vw, 21px"
                   />
                   <a
-                    href="https://www.google.co.in/maps/dir/''/bastion+bungalow/@9.9673778,76.2230607,14z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3b086d3394a701f3:0x68ff87927c894f62!2m2!1d76.2412166!2d9.9673428"
+                    href="https://www.google.com/maps/place/Kakkadampoyil+Waterfall/@11.3550148,76.1049557,17z/data=!3m1!4b1!4m5!3m4!1s0x3ba63fde637ae2bb:0x677d5e9e7902fdb7!8m2!3d11.3550148!4d76.1071444"
                     onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
                     aria-label="Napier Street, Fort Kochi - External site that opens in a new window"
                     title="Napier Street, Fort Kochi - External site that opens in a new window"
                     target="_blank"
-                    >Napier Street, Fort Kochi
+                    >Kakkadampoyil, Kerala
                   </a>
                 </p>
               </div>
@@ -191,21 +188,22 @@
             <div class="col-3">
               <div class="text-center">
                 <h2 class="">
-                  Bhoothathankettu
+                  Thusharagiri Waterfall
                 </h2>
                 <figure>
                   <img
                     class="dist-place"
-                    src="./assets/images/Ditricts/ekl/boothathan.jpg"
+                    src="./assets/images/Ditricts/KZK/Thusharagiri Waterfall.jpg"
                     alt=""
                   />
                 </figure>
               </div>
               <div class="wpb_wrapper">
                 <p class="text-justify">
-                  scenic dam site with boating facilities is situated in a vast
-                  virgin forest. It is a popular picnic sport with Salim Ali
-                  Bird Sanctuary near by.
+                  Lying in the Western Ghats of Kozhikode district in Kerala,
+                  Thusharagiri Fall cascades down as three waterfalls. Located
+                  in a small tribal village, the name of the falls means ???snow
+                  covered mountains'.
                 </p>
                 <p class="place-location">
                   Location:
@@ -215,16 +213,16 @@
                     src="./assets/images/loc.png"
                     alt="map"
                     width="21"
-                    height="21"                    
+                    height="21"
                     sizes="(max-width: 21px) 100vw, 21px"
                   />
                   <a
-                    href="https://www.google.co.in/maps/dir/''/Bhoothathankettu,+Kerala+686681/@10.1363816,76.5921814,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3b07ef9677611ba7:0x6cf0f6a94a575f7!2m2!1d76.662222!2d10.136389"
+                    href="https://www.google.com/maps/place/Thusharagiri+Waterfalls/@11.4730609,76.0518696,17z/data=!3m1!4b1!4m5!3m4!1s0x3ba66c90fe6e5007:0xa6471f1078aed465!8m2!3d11.4728749!4d76.0541761"
                     onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
                     aria-label="Kothamangalam - External site that opens in a new window"
                     title="Kothamangalam - External site that opens in a new window"
                     target="_blank"
-                    >Kothamangalam</a
+                    >Thusharagiri</a
                   >
                 </p>
               </div>
@@ -233,21 +231,23 @@
             <div class="col-3">
               <div class="text-center">
                 <h2 class="">
-                  Bolghatty palace
+                  Thikkoti Light House
                 </h2>
                 <figure>
                   <img
                     class="dist-place"
-                    src="./assets/images/Ditricts/ekl/bolgaty.jpg"
+                    src="./assets/images/Ditricts/KZK/Thikkoti Light House.jpg"
                     alt=""
                   />
                 </figure>
               </div>
               <div class="wpb_wrapper">
                 <p class="text-justify">
-                  Bolghatty palace built by the Dutch in 1744. The grounds have
-                  a small golf course &amp; several vantage points for lovely
-                  views of the harbour &amp; the sea
+                  Said to be built on the remains of a shipwreck, the Thikkoti
+                  Lighthouse is one of the major attractions of Kozhikode.
+                  Located on a rocky shoreline, the place is best known for the
+                  scenic views it offers as well as several species of nomadic
+                  birds.
                 </p>
                 <p class="place-location">
                   Location:
@@ -257,16 +257,16 @@
                     src="./assets/images/loc.png"
                     alt="map"
                     width="21"
-                    height="21"                    
+                    height="21"
                     sizes="(max-width: 21px) 100vw, 21px"
                   />
                   <a
-                    href="https://www.google.co.in/maps/dir/''/bolgatty+palace++ernakulam/@9.9841952,76.1971708,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3b0812a63b6445d3:0xfce7a976921f7af1!2m2!1d76.2672114!2d9.9842025"
+                    href="https://www.google.com/maps/place/Kadalur+Point+Lighthouse/@11.4691672,75.635099,17z/data=!3m1!4b1!4m5!3m4!1s0x3ba6893b854d3cd3:0x871105677e086ad0!8m2!3d11.4691672!4d75.6372877"
                     onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
                     aria-label="Mulavukad, Kochi - External site that opens in a new window"
                     title="Mulavukad, Kochi - External site that opens in a new window"
                     target="_blank"
-                    >Mulavukad, Kochi</a
+                    >Nandi,koyilandy, NH 17, Kozhikode, Kerala</a
                   >
                 </p>
               </div>
@@ -274,7 +274,7 @@
           </div>
 
           <!-- second -->
-          <div class="row places-row mb-3">
+          <div class="row places-row mb-3 d-none">
             <div class="col-3">
               <div class="text-center">
                 <h2 class="">
@@ -302,7 +302,7 @@
                     src="./assets/images/loc.png"
                     alt="map"
                     width="21"
-                    height="21"                    
+                    height="21"
                     sizes="(max-width: 21px) 100vw, 21px"
                   />
                   <a
@@ -345,7 +345,7 @@
                     src="./assets/images/loc.png"
                     alt="map"
                     width="21"
-                    height="21"                    
+                    height="21"
                     sizes="(max-width: 21px) 100vw, 21px"
                   />
                   <a
@@ -386,7 +386,7 @@
                     src="./assets/images/loc.png"
                     alt="map"
                     width="21"
-                    height="21"                    
+                    height="21"
                     sizes="(max-width: 21px) 100vw, 21px"
                   />
                   <a
@@ -430,7 +430,7 @@
                     src="./assets/images/loc.png"
                     alt="map"
                     width="21"
-                    height="21"                    
+                    height="21"
                     sizes="(max-width: 21px) 100vw, 21px"
                   />
                   <a
@@ -445,10 +445,11 @@
               </div>
             </div>
           </div>
-          
         </div>
         <div class="row set-more mb-3">
-            <a class="more" href="https://ernakulam.nic.in/places-of-interest/">More</a>
+          <a class="more" href="https://www.holidify.com/places/kozhikode/sightseeing-and-things-to-do.html"
+            >More</a
+          >
         </div>
       </article>
     </section>
