--- a/KSR.html
+++ b/KSR.html
@@ -46,8 +46,8 @@
     <section class="container-fluid dist-intro">
       <article class="row">
         <div class="col dist-img">
-          <h1 class="glow">ERNAKULAM</h1>
-          <img src="./assets/images/Ditricts/ernakulam.jpg" alt="" />
+          <h1 class="glow">KASARGOD</h1>
+          <img src="./assets/images/Ditricts/ksr.png" alt="" />
         </div>
       </article>
     </section>
@@ -58,7 +58,7 @@
           <div class="image-container">
             <a href="https://ernakulam.nic.in/">
               <img
-                src="./assets/images/Ditricts/map/ernakulam-map.png"
+                src="./assets/images/Ditricts/map/ksr.png"
                 class="w-100"
                 alt=""
               />
@@ -69,10 +69,7 @@
           <div class="mt-5">
             <h3>ABOUT DISTRICT&nbsp;</h3>
             <p>
-              <strong
-                >Ernakulam: An amazing paradigm of development &amp;
-                conservation</strong
-              >
+              <strong>Kasargod: An amazing paradigm of culture</strong>
             </p>
             <p
               class="text-justify"
@@ -80,18 +77,19 @@
               dir="ltr"
               data-placeholder="Translation"
             >
-              Ernakulam bordering the district of Thrissur in the north, Idukki
-              in the East, Alapuzha and Kottayam in the south, Lakshadweep Sea
-              in the west is an amalgam of a hoary heritage and global growth of
-              industry and commerce. For the outside world, Ernakulam is part of
-              Kochi referred to in the history of Kerala as the Queen of Arabian
-              Sea. The densely populated Ernakulam District embodies the
-              achievements of the Kerala State in literacy, industry, trade and
-              commerce. With an inclusive culture, relatively high per capita
-              income and an unstoppable interest of the people in updating
-              themselves of the political, economic, social and cultural
-              happenings in the national and international spheres, Ernakulam
-              represents the high modern phase of the Kerala society.
+              Kasaragod (About this soundlisten)), formerly Kassergode in
+              English,[4][5] is a municipal town and administrative headquarters
+              of Kasaragod district in the state of Kerala, India. Established
+              in the year 1966, Kasaragod was the first municipal town in the
+              district. It is the northernmost district of Kerala and is also
+              known as Saptha Bhasha Sangama Bhoomi.[2][definition needed]
+              Situated in the rich biodiversity of Western Ghats, it is known
+              for the Chandragiri and Bekal Forts,[6] Chandragiri River,
+              historic Kolathiri Rajas, natural environment of Ranipuram and
+              Kottancheri Hills, historical and religious sites like the Madiyan
+              Kulom temple, Madhur Temple, Ananthapuram Lake Temple and Malik
+              Deenar Mosque. The historic hill of Ezhimala is located on the
+              southern portion of Kavvayi Backwaters of Nileshwaram.
             </p>
           </div>
         </div>
@@ -106,7 +104,7 @@
             <div class="col-3">
               <div class="text-center">
                 <h2 class="">
-                  Areekkal Waterfalls
+                  Ranipuram
                 </h2>
                 <figure>
                   <img
@@ -118,10 +116,10 @@
               </div>
               <div class="wpb_wrapper">
                 <p class="text-justify">
-                  Areekkal falls is a must see beautiful place in Kochi, Its 35
-                  kilometers away from the main city on the Ernakulam –
-                  Thodupuzha road. One can reach Areekkal falls within one hour
-                  travel from kochi main city.
+                  The gentle hills of Ranipuram in Kerala are famous for its
+                  trekking trail. Situated at the height of about 750 meters
+                  above sea level, this destination has thick forest vegetation
+                  and lush green grasslands.
                 </p>
                 <p class="place-location">
                   Location:
@@ -131,16 +129,16 @@
                     src="./assets/images/loc.png"
                     alt="map"
                     width="21"
-                    height="21"                    
+                    height="21"
                     sizes="(max-width: 21px) 100vw, 21px"
                   />
                   <a
-                    href="https://www.google.co.in/maps/dir/''/areekkal+waterfalls/@9.9184672,76.4672979,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3b07de98019f58e3:0x9317ace207ad877c!2m2!1d76.5373385!2d9.9184745"
+                    href="https://www.google.com/maps/place/Ranipuram/@12.4192797,75.3334477,14z/data=!3m1!4b1!4m5!3m4!1s0x3ba37d0b4edae5fb:0xa2578fd53d53e34b!8m2!3d12.4192805!4d75.3509573!5m1!1e4"
                     onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
                     aria-label="Piramadam-Vettimood Road - External site that opens in a new window"
                     title="Piramadam-Vettimood Road - External site that opens in a new window"
                     target="_blank"
-                    >Piramadam-Vettimood Road</a
+                    >Ranipuram, Kerala</a
                   >
                 </p>
               </div>
@@ -149,21 +147,21 @@
             <div class="col-3">
               <div class="text-center">
                 <h2 class="">
-                  Bastion Bunglow
+                  Malom Wildlife Sanctuary
                 </h2>
                 <figure>
                   <img
                     class="dist-place"
-                    src="./assets/images/Ditricts/ekl/bastian.jpg"
+                    src="./assets/images/Ditricts/KSR/Malom Wildlife Sanctuary.jpg"
                     alt=""
                   />
                 </figure>
               </div>
               <div class="wpb_wrapper">
                 <p class="text-justify">
-                  Built in the Indo-European style way back in 1667 AD, Bastion
-                  Bungalow get its name from its location on the site of the
-                  Stromberg Bastion of the old, Dutch fort
+                  A popular tourist attraction of Kanhagad region, Malom
+                  Wildlife Sanctuary is all about lush green tropical green
+                  forest and variety of wildlife.
                 </p>
                 <p class="place-location">
                   Location:
@@ -173,16 +171,16 @@
                     src="./assets/images/loc.png"
                     alt="map"
                     width="21"
-                    height="21"                    
+                    height="21"
                     sizes="(max-width: 21px) 100vw, 21px"
                   />
                   <a
-                    href="https://www.google.co.in/maps/dir/''/bastion+bungalow/@9.9673778,76.2230607,14z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3b086d3394a701f3:0x68ff87927c894f62!2m2!1d76.2412166!2d9.9673428"
+                    href="https://www.google.com/maps/search/Malom+Wildlife+Sanctuary/@12.4192702,75.280916,12z/data=!3m1!4b1!5m1!1e4"
                     onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
                     aria-label="Napier Street, Fort Kochi - External site that opens in a new window"
                     title="Napier Street, Fort Kochi - External site that opens in a new window"
                     target="_blank"
-                    >Napier Street, Fort Kochi
+                    >Kasargod
                   </a>
                 </p>
               </div>
@@ -191,21 +189,23 @@
             <div class="col-3">
               <div class="text-center">
                 <h2 class="">
-                  Bhoothathankettu
+                  Ananthapura Lake temple
                 </h2>
                 <figure>
                   <img
                     class="dist-place"
-                    src="./assets/images/Ditricts/ekl/boothathan.jpg"
+                    src="./assets/images/Ditricts/KSR/Ananthapura Lake temple.jpg"
                     alt=""
                   />
                 </figure>
               </div>
               <div class="wpb_wrapper">
                 <p class="text-justify">
-                  scenic dam site with boating facilities is situated in a vast
-                  virgin forest. It is a popular picnic sport with Salim Ali
-                  Bird Sanctuary near by.
+                  The temple is situated in Kasargod district of Kerala and is
+                  connected to Sri Anantha Padmanabha Temple ,Trivandrum. It's a
+                  lovely temple surrounded by a lake. It is heard by the local
+                  people that there is a crocodile in this lake which protects
+                  the temple.
                 </p>
                 <p class="place-location">
                   Location:
@@ -215,16 +215,16 @@
                     src="./assets/images/loc.png"
                     alt="map"
                     width="21"
-                    height="21"                    
+                    height="21"
                     sizes="(max-width: 21px) 100vw, 21px"
                   />
                   <a
-                    href="https://www.google.co.in/maps/dir/''/Bhoothathankettu,+Kerala+686681/@10.1363816,76.5921814,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3b07ef9677611ba7:0x6cf0f6a94a575f7!2m2!1d76.662222!2d10.136389"
+                    href="https://www.google.com/maps/place/SRI+ANANTHAPADMANABHA+SWAMY+TEMPLE/@12.5842181,74.9820138,15z/data=!4m2!3m1!1s0x0:0x210b8a5e8ad802d6?sa=X&ved=2ahUKEwjv6eKugKL1AhWKSmwGHQ6BCeAQ_BJ6BAg-EAU"
                     onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
                     aria-label="Kothamangalam - External site that opens in a new window"
                     title="Kothamangalam - External site that opens in a new window"
                     target="_blank"
-                    >Kothamangalam</a
+                    >P. O, Ananthapura</a
                   >
                 </p>
               </div>
@@ -233,21 +233,23 @@
             <div class="col-3">
               <div class="text-center">
                 <h2 class="">
-                  Bolghatty palace
+                  Parappa Wildlife Sanctuary
                 </h2>
                 <figure>
                   <img
                     class="dist-place"
-                    src="./assets/images/Ditricts/ekl/bolgaty.jpg"
+                    src="./assets/images/Ditricts/KSR/Parappa Wildlife Sanctuary.jpg"
                     alt=""
                   />
                 </figure>
               </div>
               <div class="wpb_wrapper">
                 <p class="text-justify">
-                  Bolghatty palace built by the Dutch in 1744. The grounds have
-                  a small golf course &amp; several vantage points for lovely
-                  views of the harbour &amp; the sea
+                  Kasargod is a place which is blessed with nature's beauty and
+                  tranquility. Parappa Wildlife Sanctuary is one such place
+                  which offers both. It also offers natural habitation to many
+                  wildlife creatures such as turtle, porcupine, pig, Malabar
+                  Hornbill, slender loris and jungle cat.
                 </p>
                 <p class="place-location">
                   Location:
@@ -257,16 +259,16 @@
                     src="./assets/images/loc.png"
                     alt="map"
                     width="21"
-                    height="21"                    
+                    height="21"
                     sizes="(max-width: 21px) 100vw, 21px"
                   />
                   <a
-                    href="https://www.google.co.in/maps/dir/''/bolgatty+palace++ernakulam/@9.9841952,76.1971708,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3b0812a63b6445d3:0xfce7a976921f7af1!2m2!1d76.2672114!2d9.9842025"
+                    href="https://www.google.com/search?rlz=1C1CHBF_enIN949IN949&q=Parappa+Wildlife+Sanctuary&npsic=0&rflfq=1&rldoc=1&rllag=12406303,75314892,4136&tbm=lcl&sa=X&ved=2ahUKEwjF49yFgaL1AhWESmwGHQ90B5AQtgN6BAgDEE0&biw=1366&bih=600&dpr=1#rlfi=hd:;si:;mv:[[12.905188899999999,77.2515477],[8.3806592,75.1314104]];tbs:lrf:!1m4!1u3!2m2!3m1!1e1!1m4!1u2!2m2!2m1!1e1!2m1!1e2!2m1!1e3!3sIAE,lf:1,lf_ui:1"
                     onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
                     aria-label="Mulavukad, Kochi - External site that opens in a new window"
                     title="Mulavukad, Kochi - External site that opens in a new window"
                     target="_blank"
-                    >Mulavukad, Kochi</a
+                    >Kasargod</a
                   >
                 </p>
               </div>
@@ -274,7 +276,7 @@
           </div>
 
           <!-- second -->
-          <div class="row places-row mb-3">
+          <div class="row places-row mb-3 d-none">
             <div class="col-3">
               <div class="text-center">
                 <h2 class="">
@@ -302,7 +304,7 @@
                     src="./assets/images/loc.png"
                     alt="map"
                     width="21"
-                    height="21"                    
+                    height="21"
                     sizes="(max-width: 21px) 100vw, 21px"
                   />
                   <a
@@ -345,7 +347,7 @@
                     src="./assets/images/loc.png"
                     alt="map"
                     width="21"
-                    height="21"                    
+                    height="21"
                     sizes="(max-width: 21px) 100vw, 21px"
                   />
                   <a
@@ -386,7 +388,7 @@
                     src="./assets/images/loc.png"
                     alt="map"
                     width="21"
-                    height="21"                    
+                    height="21"
                     sizes="(max-width: 21px) 100vw, 21px"
                   />
                   <a
@@ -430,7 +432,7 @@
                     src="./assets/images/loc.png"
                     alt="map"
                     width="21"
-                    height="21"                    
+                    height="21"
                     sizes="(max-width: 21px) 100vw, 21px"
                   />
                   <a
@@ -445,10 +447,11 @@
               </div>
             </div>
           </div>
-          
         </div>
         <div class="row set-more mb-3">
-            <a class="more" href="https://ernakulam.nic.in/places-of-interest/">More</a>
+          <a class="more" href="https://kasargod.nic.in/tourist-places/"
+            >More</a
+          >
         </div>
       </article>
     </section>
