--- a/PLK.html
+++ b/PLK.html
@@ -46,8 +46,8 @@
     <section class="container-fluid dist-intro">
       <article class="row">
         <div class="col dist-img">
-          <h1 class="glow">ERNAKULAM</h1>
-          <img src="./assets/images/Ditricts/ernakulam.jpg" alt="" />
+          <h1 class="glow">Palakkad</h1>
+          <img src="./assets/images/Ditricts/plkd.jpg" alt="" />
         </div>
       </article>
     </section>
@@ -56,9 +56,9 @@
       <article class="row mb-5">
         <div class="col-6">
           <div class="image-container">
-            <a href="https://ernakulam.nic.in/">
+            <a href="https://palakkad.nic.in/">
               <img
-                src="./assets/images/Ditricts/map/ernakulam-map.png"
+                src="./assets/images/Ditricts/map/plk.png"
                 class="w-100"
                 alt=""
               />
@@ -69,10 +69,7 @@
           <div class="mt-5">
             <h3>ABOUT DISTRICT&nbsp;</h3>
             <p>
-              <strong
-                >Ernakulam: An amazing paradigm of development &amp;
-                conservation</strong
-              >
+              <strong>Palakkad: Land of Culture</strong>
             </p>
             <p
               class="text-justify"
@@ -80,18 +77,21 @@
               dir="ltr"
               data-placeholder="Translation"
             >
-              Ernakulam bordering the district of Thrissur in the north, Idukki
-              in the East, Alapuzha and Kottayam in the south, Lakshadweep Sea
-              in the west is an amalgam of a hoary heritage and global growth of
-              industry and commerce. For the outside world, Ernakulam is part of
-              Kochi referred to in the history of Kerala as the Queen of Arabian
-              Sea. The densely populated Ernakulam District embodies the
-              achievements of the Kerala State in literacy, industry, trade and
-              commerce. With an inclusive culture, relatively high per capita
-              income and an unstoppable interest of the people in updating
-              themselves of the political, economic, social and cultural
-              happenings in the national and international spheres, Ernakulam
-              represents the high modern phase of the Kerala society.
+              Malappuram district is a district in the state of Kerala, India.
+              The headquarters at Malappuram. The district was formed on 16 June
+              1969. Malappuram district is composed of portions of the former
+              Palakkad and Kozhikode districts: Ernad taluk and portions of
+              Tirur taluk in Kozhikode district, and portions of Perinthalmannna
+              and Ponnani taluks in Palakkad district. In 1921 the present-day
+              Malappuram district was part of the Moplah rebellions, followed by
+              decades of stagnant economic, social and political development. In
+              the early years of Communist rule in Kerala, Malappuram
+              experienced land reform under the Land Reform Ordinance. During
+              the 1970s Persian Gulf oil reserves were opened to commercial
+              extraction, and thousands of unskilled workers migrated to the
+              Gulf. They sent money home, supporting the rural economy, and by
+              the late 20th century the region had First World health standards
+              and near-universal literacy.
             </p>
           </div>
         </div>
@@ -106,22 +106,21 @@
             <div class="col-3">
               <div class="text-center">
                 <h2 class="">
-                  Areekkal Waterfalls
+                  Parambikulam Tiger Reserve
                 </h2>
                 <figure>
                   <img
                     class="dist-place"
-                    src="./assets/images/Ditricts/ekl/areekkal.jpg"
+                    src="./assets/images/Ditricts/PLK/Parambikulam Tiger Reserve.jpg"
                     alt=""
                   />
                 </figure>
               </div>
               <div class="wpb_wrapper">
                 <p class="text-justify">
-                  Areekkal falls is a must see beautiful place in Kochi, Its 35
-                  kilometers away from the main city on the Ernakulam –
-                  Thodupuzha road. One can reach Areekkal falls within one hour
-                  travel from kochi main city.
+                  Blooming with in rare varieties of medicinal plants, orchids
+                  and fauna, the Parambikkulam Wildlife Sanctuary is hailed to
+                  be one of the best wildlife sanctuaries in South India.
                 </p>
                 <p class="place-location">
                   Location:
@@ -131,16 +130,17 @@
                     src="./assets/images/loc.png"
                     alt="map"
                     width="21"
-                    height="21"                    
+                    height="21"
                     sizes="(max-width: 21px) 100vw, 21px"
                   />
                   <a
-                    href="https://www.google.co.in/maps/dir/''/areekkal+waterfalls/@9.9184672,76.4672979,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3b07de98019f58e3:0x9317ace207ad877c!2m2!1d76.5373385!2d9.9184745"
+                    href="https://www.google.com/maps/place/Parambikulam+Tiger+Reserve/@10.4469414,76.8136371,17z/data=!3m1!4b1!4m5!3m4!1s0x3ba81db91f990ee1:0xbe2bd65c610576c4!8m2!3d10.4469414!4d76.8158258"
                     onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
                     aria-label="Piramadam-Vettimood Road - External site that opens in a new window"
                     title="Piramadam-Vettimood Road - External site that opens in a new window"
                     target="_blank"
-                    >Piramadam-Vettimood Road</a
+                  >
+                    Parambikulam Road, Kerala 678661</a
                   >
                 </p>
               </div>
@@ -149,21 +149,25 @@
             <div class="col-3">
               <div class="text-center">
                 <h2 class="">
-                  Bastion Bunglow
+                  Silent Valley National Park
                 </h2>
                 <figure>
                   <img
                     class="dist-place"
-                    src="./assets/images/Ditricts/ekl/bastian.jpg"
+                    src="./assets/images/Ditricts/PLK/Silent Valley National Park.jpg"
                     alt=""
                   />
                 </figure>
               </div>
               <div class="wpb_wrapper">
                 <p class="text-justify">
-                  Built in the Indo-European style way back in 1667 AD, Bastion
-                  Bungalow get its name from its location on the site of the
-                  Stromberg Bastion of the old, Dutch fort
+                  The Silent Valley National Park, with its lush green forests
+                  and beautiful views of the rich flora, is a popular
+                  destination for nature and wildlife lovers in Kerala. With its
+                  long, detailed history and the unique status of a Rain Forest,
+                  this national park is truly a sight to visit. The well-planned
+                  Safari and the beautiful stop-overs around the park only make
+                  a trip to this part of Kerala more worthwhile.
                 </p>
                 <p class="place-location">
                   Location:
@@ -173,16 +177,16 @@
                     src="./assets/images/loc.png"
                     alt="map"
                     width="21"
-                    height="21"                    
+                    height="21"
                     sizes="(max-width: 21px) 100vw, 21px"
                   />
                   <a
-                    href="https://www.google.co.in/maps/dir/''/bastion+bungalow/@9.9673778,76.2230607,14z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3b086d3394a701f3:0x68ff87927c894f62!2m2!1d76.2412166!2d9.9673428"
+                    href="https://www.google.com/maps/place/Silent+Valley+National+Park/@11.0694222,76.4258137,17z/data=!3m1!4b1!4m5!3m4!1s0x3ba62af225691cfd:0xf9e2a321ac787017!8m2!3d11.0694222!4d76.4280024"
                     onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
                     aria-label="Napier Street, Fort Kochi - External site that opens in a new window"
                     title="Napier Street, Fort Kochi - External site that opens in a new window"
                     target="_blank"
-                    >Napier Street, Fort Kochi
+                    >Wildlife Warden, Silent Valley Division
                   </a>
                 </p>
               </div>
@@ -191,21 +195,24 @@
             <div class="col-3">
               <div class="text-center">
                 <h2 class="">
-                  Bhoothathankettu
+                  Ottapalam
                 </h2>
                 <figure>
                   <img
                     class="dist-place"
-                    src="./assets/images/Ditricts/ekl/boothathan.jpg"
+                    src="./assets/images/Ditricts/PLK/Ottapalam.jpg"
                     alt=""
                   />
                 </figure>
               </div>
               <div class="wpb_wrapper">
                 <p class="text-justify">
-                  scenic dam site with boating facilities is situated in a vast
-                  virgin forest. It is a popular picnic sport with Salim Ali
-                  Bird Sanctuary near by.
+                  Situated on the banks of the Bharathapuzha River, or Nila,
+                  Ottapalam is a scenic town in Pallakad, also known as the
+                  'land of palm trees'. Ottapalam claims a rich cultural
+                  heritage and has hosted quite a few historic events. Earlier,
+                  it used to be a major town of the erstwhile Valluvanad, during
+                  the reign of the Zamorins of Calicut.
                 </p>
                 <p class="place-location">
                   Location:
@@ -215,16 +222,16 @@
                     src="./assets/images/loc.png"
                     alt="map"
                     width="21"
-                    height="21"                    
+                    height="21"
                     sizes="(max-width: 21px) 100vw, 21px"
                   />
                   <a
-                    href="https://www.google.co.in/maps/dir/''/Bhoothathankettu,+Kerala+686681/@10.1363816,76.5921814,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3b07ef9677611ba7:0x6cf0f6a94a575f7!2m2!1d76.662222!2d10.136389"
+                    href="https://www.google.com/maps/place/Ottapalam,+Kerala/@10.77638,76.3553076,14z/data=!3m1!4b1!4m5!3m4!1s0x3ba7d94da37758a1:0xc37b1f3ef340c087!8m2!3d10.7766702!4d76.3759375"
                     onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
                     aria-label="Kothamangalam - External site that opens in a new window"
                     title="Kothamangalam - External site that opens in a new window"
                     target="_blank"
-                    >Kothamangalam</a
+                    >Ottapalam, Palakkad</a
                   >
                 </p>
               </div>
@@ -233,21 +240,24 @@
             <div class="col-3">
               <div class="text-center">
                 <h2 class="">
-                  Bolghatty palace
+                  Palakkad Fort
                 </h2>
                 <figure>
                   <img
                     class="dist-place"
-                    src="./assets/images/Ditricts/ekl/bolgaty.jpg"
+                    src="./assets/images/Ditricts/PLK/Palakkad Fort.jpg"
                     alt=""
                   />
                 </figure>
               </div>
               <div class="wpb_wrapper">
                 <p class="text-justify">
-                  Bolghatty palace built by the Dutch in 1744. The grounds have
-                  a small golf course &amp; several vantage points for lovely
-                  views of the harbour &amp; the sea
+                  The Palakkad Fort in Kerala is a beautiful historical monument
+                  that has gently integrated its high walls with its surrounding
+                  green gardens. One of the most well-preserved forts in the
+                  state of Kerala, the Palakkad fort was built in the 1766 AD by
+                  Hyder Ali and is now a protected monument under the
+                  Archaeological Survey of India.
                 </p>
                 <p class="place-location">
                   Location:
@@ -257,16 +267,16 @@
                     src="./assets/images/loc.png"
                     alt="map"
                     width="21"
-                    height="21"                    
+                    height="21"
                     sizes="(max-width: 21px) 100vw, 21px"
                   />
                   <a
-                    href="https://www.google.co.in/maps/dir/''/bolgatty+palace++ernakulam/@9.9841952,76.1971708,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3b0812a63b6445d3:0xfce7a976921f7af1!2m2!1d76.2672114!2d9.9842025"
+                    href="https://www.google.com/maps/place/Palakkad+Fort/@10.7637057,76.6549328,17z/data=!3m1!4b1!4m5!3m4!1s0x3ba86dee9706765f:0xbe653c3f3ca26523!8m2!3d10.7637057!4d76.6571215"
                     onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
                     aria-label="Mulavukad, Kochi - External site that opens in a new window"
                     title="Mulavukad, Kochi - External site that opens in a new window"
                     target="_blank"
-                    >Mulavukad, Kochi</a
+                    >Palakkad-Koduvayur, Thathamangalam-Meenakshipuram Highway</a
                   >
                 </p>
               </div>
@@ -274,7 +284,7 @@
           </div>
 
           <!-- second -->
-          <div class="row places-row mb-3">
+          <div class="row places-row mb-3 d-none">
             <div class="col-3">
               <div class="text-center">
                 <h2 class="">
@@ -302,7 +312,7 @@
                     src="./assets/images/loc.png"
                     alt="map"
                     width="21"
-                    height="21"                    
+                    height="21"
                     sizes="(max-width: 21px) 100vw, 21px"
                   />
                   <a
@@ -345,7 +355,7 @@
                     src="./assets/images/loc.png"
                     alt="map"
                     width="21"
-                    height="21"                    
+                    height="21"
                     sizes="(max-width: 21px) 100vw, 21px"
                   />
                   <a
@@ -386,7 +396,7 @@
                     src="./assets/images/loc.png"
                     alt="map"
                     width="21"
-                    height="21"                    
+                    height="21"
                     sizes="(max-width: 21px) 100vw, 21px"
                   />
                   <a
@@ -430,7 +440,7 @@
                     src="./assets/images/loc.png"
                     alt="map"
                     width="21"
-                    height="21"                    
+                    height="21"
                     sizes="(max-width: 21px) 100vw, 21px"
                   />
                   <a
@@ -445,10 +455,13 @@
               </div>
             </div>
           </div>
-          
         </div>
         <div class="row set-more mb-3">
-            <a class="more" href="https://ernakulam.nic.in/places-of-interest/">More</a>
+          <a
+            class="more"
+            href="https://www.holidify.com/places/palakkad/sightseeing-and-things-to-do.html"
+            >More</a
+          >
         </div>
       </article>
     </section>
