--- a/PT.html
+++ b/PT.html
@@ -46,8 +46,8 @@
     <section class="container-fluid dist-intro">
       <article class="row">
         <div class="col dist-img">
-          <h1 class="glow">ERNAKULAM</h1>
-          <img src="./assets/images/Ditricts/ernakulam.jpg" alt="" />
+          <h1 class="glow">Pathanamthitta</h1>
+          <img src="./assets/images/Ditricts/PT.jpg" alt="" />
         </div>
       </article>
     </section>
@@ -56,9 +56,9 @@
       <article class="row mb-5">
         <div class="col-6">
           <div class="image-container">
-            <a href="https://ernakulam.nic.in/">
+            <a href="https://pathanamthitta.nic.in/">
               <img
-                src="./assets/images/Ditricts/map/ernakulam-map.png"
+                src="./assets/images/Ditricts/map/PK.png"
                 class="w-100"
                 alt=""
               />
@@ -69,10 +69,7 @@
           <div class="mt-5">
             <h3>ABOUT DISTRICT&nbsp;</h3>
             <p>
-              <strong
-                >Ernakulam: An amazing paradigm of development &amp;
-                conservation</strong
-              >
+              <strong>Pathanamthitta: Land of Richness</strong>
             </p>
             <p
               class="text-justify"
@@ -80,18 +77,17 @@
               dir="ltr"
               data-placeholder="Translation"
             >
-              Ernakulam bordering the district of Thrissur in the north, Idukki
-              in the East, Alapuzha and Kottayam in the south, Lakshadweep Sea
-              in the west is an amalgam of a hoary heritage and global growth of
-              industry and commerce. For the outside world, Ernakulam is part of
-              Kochi referred to in the history of Kerala as the Queen of Arabian
-              Sea. The densely populated Ernakulam District embodies the
-              achievements of the Kerala State in literacy, industry, trade and
-              commerce. With an inclusive culture, relatively high per capita
-              income and an unstoppable interest of the people in updating
-              themselves of the political, economic, social and cultural
-              happenings in the national and international spheres, Ernakulam
-              represents the high modern phase of the Kerala society.
+              Pathanamthitta District is a district in the southern part of
+              Kerala, India. The district headquarters is in the town of
+              Pathanamthitta. There are four municipalities in Pathanamthitta:
+              Tiruvalla, Adoor, Pathanamthitta and Pandalam. According to the
+              2001 Census of India, the population was 1,231,577, making it the
+              third least populous district in Kerala (out of 14), after Wayanad
+              and Idukki. Pathanamthitta has been declared the first polio-free
+              district in India. The district is 10.03% urbanised.
+              Pathanamthitta is one of the Richestt districts in India with just
+              1.17% poverty as of 2013, which places the district among top 5
+              districts in India with least poverty.
             </p>
           </div>
         </div>
@@ -106,22 +102,22 @@
             <div class="col-3">
               <div class="text-center">
                 <h2 class="">
-                  Areekkal Waterfalls
+                  Perunthenaruvi Waterfall
                 </h2>
                 <figure>
                   <img
                     class="dist-place"
-                    src="./assets/images/Ditricts/ekl/areekkal.jpg"
+                    src="./assets/images/Ditricts/PT/Perunthenaruvi Waterfall.jpg"
                     alt=""
                   />
                 </figure>
               </div>
               <div class="wpb_wrapper">
                 <p class="text-justify">
-                  Areekkal falls is a must see beautiful place in Kochi, Its 35
-                  kilometers away from the main city on the Ernakulam –
-                  Thodupuzha road. One can reach Areekkal falls within one hour
-                  travel from kochi main city.
+                  A natural waterfall with captivating surroundings is situated
+                  on the banks of the River Pamba. The fall is 60 to 100 ft deep
+                  which pours down on a rocky bed. The place is a favourite
+                  picnic spot among locals as well as tourists.
                 </p>
                 <p class="place-location">
                   Location:
@@ -131,16 +127,17 @@
                     src="./assets/images/loc.png"
                     alt="map"
                     width="21"
-                    height="21"                    
+                    height="21"
                     sizes="(max-width: 21px) 100vw, 21px"
                   />
                   <a
-                    href="https://www.google.co.in/maps/dir/''/areekkal+waterfalls/@9.9184672,76.4672979,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3b07de98019f58e3:0x9317ace207ad877c!2m2!1d76.5373385!2d9.9184745"
+                    href="https://www.google.com/maps/place/Perunthenaruvi+Falls/@9.4135005,76.8734763,17z/data=!3m1!4b1!4m5!3m4!1s0x3b0646e149d72d2f:0xe52e159e8b9c109e!8m2!3d9.4135005!4d76.875665"
                     onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
                     aria-label="Piramadam-Vettimood Road - External site that opens in a new window"
                     title="Piramadam-Vettimood Road - External site that opens in a new window"
                     target="_blank"
-                    >Piramadam-Vettimood Road</a
+                  >
+                    Perumthenaruvi Hilltop Rd, Vechoochira, Kerala 686511</a
                   >
                 </p>
               </div>
@@ -149,21 +146,20 @@
             <div class="col-3">
               <div class="text-center">
                 <h2 class="">
-                  Bastion Bunglow
+                  Gavi
                 </h2>
                 <figure>
                   <img
                     class="dist-place"
-                    src="./assets/images/Ditricts/ekl/bastian.jpg"
+                    src="./assets/images/Ditricts/PT/Gavi.jpg"
                     alt=""
                   />
                 </figure>
               </div>
               <div class="wpb_wrapper">
                 <p class="text-justify">
-                  Built in the Indo-European style way back in 1667 AD, Bastion
-                  Bungalow get its name from its location on the site of the
-                  Stromberg Bastion of the old, Dutch fort
+                  Gavi is situated some 14 km away from the famed Periyar Tiger
+                  Reserve and is heaven on Earth, quite literally.
                 </p>
                 <p class="place-location">
                   Location:
@@ -173,16 +169,16 @@
                     src="./assets/images/loc.png"
                     alt="map"
                     width="21"
-                    height="21"                    
+                    height="21"
                     sizes="(max-width: 21px) 100vw, 21px"
                   />
                   <a
-                    href="https://www.google.co.in/maps/dir/''/bastion+bungalow/@9.9673778,76.2230607,14z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3b086d3394a701f3:0x68ff87927c894f62!2m2!1d76.2412166!2d9.9673428"
+                    href="https://www.google.com/maps/place/Gavi,+Kerala/@9.4374615,77.1433351,14z/data=!3m1!4b1!4m5!3m4!1s0x3b0658f762eea579:0x343b8a48f3b3c7de!8m2!3d9.4358536!4d77.1657716"
                     onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
                     aria-label="Napier Street, Fort Kochi - External site that opens in a new window"
                     title="Napier Street, Fort Kochi - External site that opens in a new window"
                     target="_blank"
-                    >Napier Street, Fort Kochi
+                    >Pathanamthitta
                   </a>
                 </p>
               </div>
@@ -191,21 +187,22 @@
             <div class="col-3">
               <div class="text-center">
                 <h2 class="">
-                  Bhoothathankettu
+                  Sabarimala
                 </h2>
                 <figure>
                   <img
                     class="dist-place"
-                    src="./assets/images/Ditricts/ekl/boothathan.jpg"
+                    src="./assets/images/Ditricts/PT/Sabarimala.jpg"
                     alt=""
                   />
                 </figure>
               </div>
               <div class="wpb_wrapper">
                 <p class="text-justify">
-                  scenic dam site with boating facilities is situated in a vast
-                  virgin forest. It is a popular picnic sport with Salim Ali
-                  Bird Sanctuary near by.
+                  One of the major religious hubs of South India, Sabarimala
+                  houses Sastha Temple situated about 80 km from Pathanamthitta
+                  town. Dedicated to Lord Ayyappa, this temple is situated in
+                  the lap of nature amid the dangerous hills of Western Ghats.
                 </p>
                 <p class="place-location">
                   Location:
@@ -215,16 +212,16 @@
                     src="./assets/images/loc.png"
                     alt="map"
                     width="21"
-                    height="21"                    
+                    height="21"
                     sizes="(max-width: 21px) 100vw, 21px"
                   />
                   <a
-                    href="https://www.google.co.in/maps/dir/''/Bhoothathankettu,+Kerala+686681/@10.1363816,76.5921814,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3b07ef9677611ba7:0x6cf0f6a94a575f7!2m2!1d76.662222!2d10.136389"
+                    href="https://www.google.com/maps/place/Sabarimala,+Kerala/@9.4224323,77.0534704,14z/data=!3m1!4b1!4m5!3m4!1s0x3b065b984dd41c11:0x953037d850a3006e!8m2!3d9.4320761!4d77.0820015"
                     onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
                     aria-label="Kothamangalam - External site that opens in a new window"
                     title="Kothamangalam - External site that opens in a new window"
                     target="_blank"
-                    >Kothamangalam</a
+                    >Perinad Village, Pathanamthitta</a
                   >
                 </p>
               </div>
@@ -233,21 +230,22 @@
             <div class="col-3">
               <div class="text-center">
                 <h2 class="">
-                  Bolghatty palace
+                  Aranmula
                 </h2>
                 <figure>
                   <img
                     class="dist-place"
-                    src="./assets/images/Ditricts/ekl/bolgaty.jpg"
+                    src="./assets/images/Ditricts/PT/Aranmula.jpg"
                     alt=""
                   />
                 </figure>
               </div>
               <div class="wpb_wrapper">
                 <p class="text-justify">
-                  Bolghatty palace built by the Dutch in 1744. The grounds have
-                  a small golf course &amp; several vantage points for lovely
-                  views of the harbour &amp; the sea
+                  Aranmula is a place mainly known for its expert craftsmanship
+                  and snake boat race organized on the final day of Onam
+                  Festival. The most renowned art of metal mirror of Aranmula
+                  Kannadi has its roots originated from this place.
                 </p>
                 <p class="place-location">
                   Location:
@@ -257,16 +255,16 @@
                     src="./assets/images/loc.png"
                     alt="map"
                     width="21"
-                    height="21"                    
+                    height="21"
                     sizes="(max-width: 21px) 100vw, 21px"
                   />
                   <a
-                    href="https://www.google.co.in/maps/dir/''/bolgatty+palace++ernakulam/@9.9841952,76.1971708,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3b0812a63b6445d3:0xfce7a976921f7af1!2m2!1d76.2672114!2d9.9842025"
+                    href="https://www.google.com/maps/place/Aranmula,+Kerala/@9.3284311,76.6791679,15z/data=!3m1!4b1!4m5!3m4!1s0x3b063cfc4923b5a7:0x720304f454797c45!8m2!3d9.3264965!4d76.6839905"
                     onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
                     aria-label="Mulavukad, Kochi - External site that opens in a new window"
                     title="Mulavukad, Kochi - External site that opens in a new window"
                     target="_blank"
-                    >Mulavukad, Kochi</a
+                    > Pathanamthitta district</a
                   >
                 </p>
               </div>
@@ -274,7 +272,7 @@
           </div>
 
           <!-- second -->
-          <div class="row places-row mb-3">
+          <div class="row places-row mb-3 d-none">
             <div class="col-3">
               <div class="text-center">
                 <h2 class="">
@@ -302,7 +300,7 @@
                     src="./assets/images/loc.png"
                     alt="map"
                     width="21"
-                    height="21"                    
+                    height="21"
                     sizes="(max-width: 21px) 100vw, 21px"
                   />
                   <a
@@ -345,7 +343,7 @@
                     src="./assets/images/loc.png"
                     alt="map"
                     width="21"
-                    height="21"                    
+                    height="21"
                     sizes="(max-width: 21px) 100vw, 21px"
                   />
                   <a
@@ -386,7 +384,7 @@
                     src="./assets/images/loc.png"
                     alt="map"
                     width="21"
-                    height="21"                    
+                    height="21"
                     sizes="(max-width: 21px) 100vw, 21px"
                   />
                   <a
@@ -430,7 +428,7 @@
                     src="./assets/images/loc.png"
                     alt="map"
                     width="21"
-                    height="21"                    
+                    height="21"
                     sizes="(max-width: 21px) 100vw, 21px"
                   />
                   <a
@@ -445,10 +443,13 @@
               </div>
             </div>
           </div>
-          
         </div>
         <div class="row set-more mb-3">
-            <a class="more" href="https://ernakulam.nic.in/places-of-interest/">More</a>
+          <a
+            class="more"
+            href="https://www.holidify.com/places/pathanamthitta/sightseeing-and-things-to-do.html"
+            >More</a
+          >
         </div>
       </article>
     </section>
